welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:10: error: type mismatch;
 found   : Unit
 required: Int
sum = Math.abs(21-n) ;
    ^diff21:8: error: type mismatch;
 found   : Unit
 required: Int
if (n<21 )
^